--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 
     <script src="object.js"></script>
     <script src="property-key.js"></script>
+    <script src="object.keys.js"></script>
 </body>
 </html>
