--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="object.js"></script>
     <script src="property-key.js"></script>
     <script src="object.keys.js"></script>
+    <script src="property-key.js"></script>
 </body>
 </html>
