--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <script src="property-key.js"></script>
     <script src="object.keys.js"></script>
     <script src="property-key.js"></script>
+    <script src="practice-objects.js"></script>
 </body>
 </html>
